--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,25 @@
 body {
-    background-color: coral;
     float:center;
+    height: 850px;
+    width: 100%;
+    background-image: url(../images/starwars.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #header {
     font-family: 'Poller One', cursive;
-    font-size: 30px;
+    font-size: 100px;
+    color: yellow;
+    margin-top:20px;
+    margin-bottom: 20px;
+}
+
+#timer {
+    color: white; 
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .quizGame {
@@ -15,8 +29,36 @@ body {
 #quiz {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
+    color: white;
+    font-size: 20px;
+    margin: 10px 20px 10px 20px
+}
+
+p {
+    margin: 10px 20px 10px 20px
 }
 
 #afterSubmit {
+    float:center;
     visibility: hidden;
+    width: 100%;
+    height: 100%;
+    font-size: 50px;
+    color: white;
+}
+
+#button {
+    background: blue;
+    border: none;
+    color: white;
+    font-size:20px;
+    transition-duration: .3s;
+    margin-top: 20px;
+    padding:10px;
+}
+
+#button:hover {
+    background: greenyellow;
+    color: plum;
+    cursor: pointer;
 }
