--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,13 @@ body {
     margin: 10px 20px 10px 20px
 }
 
-p {
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+.p {
     margin: 10px 20px 10px 20px
 }
 
